# github-agent-project-orchestrator

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
scripts/: README.md  __init__.py  github_project_crud.py  mcp_server.py
tests/: test_github_project_crud.py
